--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 *.jar
+.idea
+.project
+.settings
+.classpath
+KeepNote-Step1-Boilerplate.iml
