--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,45 @@
 			<version>5.0.2.RELEASE</version>
 		</dependency>
 
-		<!-- Dependency for JSTL to be added -->
-		
-		<!-- Dependency for jaxb-api to be added(if using JDK9) -->
 
-		<!-- Dependency for jaxb-impl to be added(if using JDK9) -->
+	  <!-- Dependency for JSTL to be added -->
+	  <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+	  <dependency>
+		  <groupId>jstl</groupId>
+		  <artifactId>jstl</artifactId>
+		  <version>1.2</version>
+	  </dependency>
 
-		<!-- Dependency for Spring Test to be added -->
 
-		<dependency>
+	  <!-- Dependency for jaxb-api to be added(if using JDK9) -->
+	  <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+	  <dependency>
+		  <groupId>javax.xml.bind</groupId>
+		  <artifactId>jaxb-api</artifactId>
+		  <version>2.2.8</version>
+	  </dependency>
+
+
+	  <!-- Dependency for jaxb-impl to be added(if using JDK9) -->
+	  <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+	  <dependency>
+		  <groupId>com.sun.xml.bind</groupId>
+		  <artifactId>jaxb-impl</artifactId>
+		  <version>2.3.2</version>
+	  </dependency>
+
+
+	  <!-- Dependency for Spring Test to be added -->
+	  <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+	  <dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-test</artifactId>
+		  <version>5.1.4.RELEASE</version>
+		  <scope>test</scope>
+	  </dependency>
+
+
+	  <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>5.0.2.RELEASE</version>
